# intent_recognition

./: .gitignore  CMakeLists.txt  README.md  main.cpp  recognition.cpp  recognition.h
inputs/: objects.txt  operations.txt  questions.txt  subjects.txt
test/: CMakeLists.txt  test.cpp
